--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,5 @@
 @import url(../vendor/normalize.css);
-@import url(../vendor/inter/inter.css);
+@import url(../vendor/fonts/inter.css);
 @import url(../blocks/page/page.css);
 
 @import url(../blocks/header/header.css);
@@ -23,3 +23,11 @@
 
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
+
+@import url(../blocks/places/places.css);
+@import url(../blocks/places/__place/places__place.css);
+@import url(../blocks/places/__website/places__website.css);
+@import url(../blocks/places/__image/places__image.css);
+@import url(../blocks/places/__link/places__link.css);
+@import url(../blocks/places/__paragraph/places__paragraph.css);
+@import url(../blocks/places/__url-heading/places__url-heading.css);
