--- a/blocks/places/__place/places__place.css
+++ b/blocks/places/__place/places__place.css
@@ -1,4 +1,9 @@
 .places__place {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  gap: 48px 40px;
+  margin-bottom: 80px;
+}
+.places__place:last-child {
+  margin-bottom: 0;
 }
