--- a/pages/index.css
+++ b/pages/index.css
@@ -26,6 +26,7 @@
 
 @import url(../blocks/places/places.css);
 @import url(../blocks/places/__place/places__place.css);
+@import url(../blocks/places/__title/places__title.css);
 @import url(../blocks/places/__website/places__website.css);
 @import url(../blocks/places/__image/places__image.css);
 @import url(../blocks/places/__link/places__link.css);
