--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -4,4 +4,10 @@
   height: 100%;
   background-color: #2a2c2f;
   opacity: 0.3;
+  transition: .3s;
 }
+
+/* 2 Вариант ховера для оверлея. Почему не стал использовать: при наведении на тайтл, ховер сбрасывался, поэтому реализовал через родитель cover */
+/* .cover__overlay:hover {
+  opacity: 0.8;
+} */
