--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,9 +1,11 @@
 .cover__title {
-margin: 0;
-margin-bottom: 32px;
-max-width: 560px;
-font-weight: 900;
-font-size: 72px;
-line-height: 76px;
-text-align: center;
+  margin: 0;
+  margin-bottom: 32px;
+  max-width: 560px;
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 76px;
+  text-align: center;
+  color: white;
+  text-decoration: none;
 }
