--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,7 @@
 .page {
   width: 100%;
   /* position: absolute; */
-  padding: 28px 48px;
+  /* padding: 28px 48px; */
   background-color: #2a2c2f;
   font-family: 'Inter', Tahoma, Geneva, Verdana, sans-serif;
   box-sizing: border-box;
