--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,7 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts/inter.css);
 @import url(../blocks/page/page.css);
+@import url(../blocks/page/__link-hover/page__link-hover.css);
 
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__links/header__links.css);
