--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -2,3 +2,10 @@
   display: flex;
   list-style: none;
 }
+
+@media screen and (max-width: 768px) {
+  .footer__links {
+    flex-direction: column;
+    margin-bottom: 48px;
+  }
+}
