--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -5,3 +5,15 @@
   max-width: 984px;
   margin: 56px auto 0;
 }
+
+@media screen and (max-width: 1280px) {
+  .lead {
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .lead {
+    max-width: 768px;
+  }
+}
