--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,3 +1,10 @@
 .footer__copyright {
   margin: 0;
 }
+
+@media screen and (max-width: 768px) {
+  .footer__copyright {
+    font-size: 14px;
+    line-height: 14px;
+  }
+}
