--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -9,3 +9,19 @@
 .footer__link:last-child {
   margin-right: 0;
 }
+
+@media screen and (max-width: 768px) {
+  .footer__link {
+    font-size: 24px;
+    line-height: 24px;
+    margin-bottom: 32px;
+  }
+
+  .footer__link {
+    margin-right: 0;
+  }
+  
+  .footer__link:last-child {
+    margin-bottom: 0;
+  }
+}
