--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -7,3 +7,23 @@
   margin: 92px auto 0;
   padding-bottom: 24px;
 }
+
+@media screen and (max-width: 1280px) {
+  .footer {
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .footer {
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 16px;
+  }
+}
