--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,29 @@
 .header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   max-width: 1184px;
-  max-height: 52px;
+  min-height: 52px;
   margin: 0 auto;
   padding-top: 28px;
+ 
+}
+
+@media screen and (max-width: 1280px) {
+  .header {
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .header {
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    min-width: 288px;
+    padding: 16px;
+  }
 }
