--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -4,3 +4,23 @@
   max-width: 984px;
   margin: 92px auto 0;
 }
+
+@media screen and (max-width: 1280px) {
+  .intro {
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .intro {
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .intro {
+    min-width: 288px;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
