--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -5,3 +5,9 @@
   line-height: 14px;
   margin: 8px 0 0 0;
 }
+
+@media screen and (max-width: 1024px) {
+  .lead__caption {
+    padding-left: 24px;
+  }
+}
