--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -6,3 +6,10 @@
   max-width: 640px;
   margin: 0 0 64px 0;
 }
+
+@media screen and (max-width: 768px) {
+  .lead__subtitle {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
