--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -4,6 +4,12 @@
   /* padding: 28px 48px; */
   background-color: #2a2c2f;
   font-family: 'Inter', Tahoma, Geneva, Verdana, sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
   box-sizing: border-box;
   color: white;
 }
