--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -6,3 +6,21 @@
   justify-content: center;
   gap: 16px;
 }
+
+@media screen and (max-width: 1280px) {
+  .photo-grid {
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .photo-grid {
+    max-width: 720px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .photo-grid {
+    padding: 0 16px;
+  }
+}
