--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -4,3 +4,16 @@
   font-size: 18px;
   line-height: 29px;
 }
+
+@media screen and (max-width: 1024px) {
+  .places__paragraph {
+    font-size: 16px;
+    line-height: 26px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .places__paragraph  {
+    padding: 0 16px;
+  }
+}
