--- a/blocks/places/__place/places__place.css
+++ b/blocks/places/__place/places__place.css
@@ -7,3 +7,15 @@
 .places__place:last-child {
   margin-bottom: 0;
 }
+
+@media screen and (max-width: 1024px) {
+  .places__place {
+    gap: 48px 28px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .places__place {
+    grid-template-columns: 1fr;
+  }
+}
