--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -4,3 +4,16 @@
   line-height: 76px;
   font-weight: 900;
 }
+
+@media screen and (max-width: 1024px) {
+  .places__title {
+    font-size: 42px;
+    line-height: 46px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .places__title {
+    padding: 0 16px;
+  }
+}
