--- a/blocks/places/__website/places__website.css
+++ b/blocks/places/__website/places__website.css
@@ -1,3 +1,9 @@
 .places__website {
   align-self: end;
 }
+
+@media screen and (max-width: 768px) {
+  .places__website  {
+    padding: 0 16px;
+  }
+}
