--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -2,3 +2,15 @@
   max-width: 984px;
   margin: 92px auto 0;
 }
+
+@media screen and (max-width: 1280px) {
+  .places {
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .places {
+    max-width: 720px;
+  }
+}
