--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -12,8 +12,15 @@
 
 @media screen and (max-width: 768px) {
   .cover__title {
+    font-size: 52px;
+    line-height: 54px;
+    max-width: 400px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .cover__title {
     font-size: 32px;
     line-height: 35px;
-    max-width: 288px;
+    max-width: 250px;
   }
 }
