--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -7,6 +7,9 @@
   transition: .3s;
 }
 
+.cover:hover .cover__overlay {
+  opacity: 0.8;
+}
 /* 2 Вариант ховера для оверлея. Почему не стал использовать: при наведении на тайтл, ховер сбрасывался, поэтому реализовал через родитель cover */
 /* .cover__overlay:hover {
   opacity: 0.8;
