--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -7,7 +7,8 @@
   align-items: center;
 }
 
-.cover:hover .cover__overlay {
-    opacity: 0.8;
+@media screen and (max-width: 768px) {
+  .cover {
+    margin-top: 66px;
+  }
 }
-
