--- a/blocks/cover/__block/cover__block.css
+++ b/blocks/cover/__block/cover__block.css
@@ -1,6 +1,9 @@
-.cover__block{
-  position: absolute;
+.cover__block {
   display: flex;
   flex-direction: column;
   align-items: center;
+  grid-row: 1 / 2;
+  grid-column: 1 / 4;
+  align-self: center;
+  z-index: 5;
 }
