--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,10 +1,11 @@
 .cover__overlay {
-  position: absolute;
   width: 100%;
   height: 100%;
   background-color: #2a2c2f;
   opacity: 0.3;
-  transition: .3s;
+  transition: 0.3s;
+  grid-row: 1 / 2;
+  grid-column: 1 / 4;
 }
 
 .cover:hover .cover__overlay {
