--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,13 +1,12 @@
 .cover {
   margin: 92px auto 0;
   max-width: 1184px;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .cover {
     margin-top: 66px;
   }
