--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,8 +1,18 @@
 .cover__link {
   display: flex;
-  z-index: 6;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  color: white;
+  z-index: 5;
   width: 100%;
   height: 100%;
   grid-row: 1 / 2;
   grid-column: 1 / 4;
+  background-color: rgba(42, 44, 47, 0.3);
+  transition: 0.3s;
+}
+.cover__link:hover {
+  background-color: rgba(42, 44, 47, 0.8);
 }
