--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -4,6 +4,7 @@
   font-size: 10px;
   line-height: 14px;
   margin: 8px 0 0 0;
+  letter-spacing: 0.15em;
 }
 
 @media screen and (max-width: 1023px) {
